Lab5_6/reddits/worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deploy
  labels:
    app: reddits
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reddits
  template:
    metadata:
      labels:
        app: reddits
    spec:
      containers:
      - name: worker
        image: kaluzny1995/worker:latest
        imagePullPolicy: Always
        command: ['celery', 'worker', '--app=worker.app', '--beat']
        livenessProbe:
          exec:
            command:
              - echo
              - "Liveness check OK."
          initialDelaySeconds: 45
          periodSeconds: 20

        readinessProbe:
          exec:
            command:
              - echo
              - "Readiness check OK."
          initialDelaySeconds: 20
          periodSeconds: 10
