Lab5_6/reddits/influxdb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-svc
  labels:
    app: reddits
spec:
  ports:
    - port: 8086
      targetPort: 8086
      protocol: TCP
      name: http
  clusterIP: None
  selector:
    app: reddits
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb-sts
  labels:
    app: reddits
spec:
  replicas: 1
  serviceName: "influxdb-svc"
  selector:
    matchLabels:
      app: reddits
  template:
    metadata:
      labels:
        app: reddits
    spec:
      volumes:
        - name: influxdb-pv
          persistentVolumeClaim:
            claimName: influxdb-pvc
      containers:
        - name: influxdb
          image: influxdb:1.8
          ports:
            - name: http
              containerPort: 8086
              protocol: TCP
          volumeMounts:
            - name: influxdb-pv
              mountPath: /var/lib/influxdb
