Lab5_6/reddits/mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  labels:
    app: reddits
spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: http
  clusterIP: None
  selector:
    app: reddits
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-sts
  labels:
    app: reddits
spec:
  replicas: 1
  serviceName: "mongodb-svc"
  selector:
    matchLabels:
      app: reddits
  template:
    metadata:
      labels:
        app: reddits
    spec:
      volumes:
        - name: mongodb-pv
          persistentVolumeClaim:
            claimName: mongodb-pvc
      containers:
        - name: mongodb
          image: mongo:4.4
          command:
            - mongod
            - "--bind_ip"
            - 0.0.0.0
          ports:
            - name: http
              containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: mongodb-pv
              mountPath: /data/db
