Lab5_6/reddits/rabbitmq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
  labels:
    app: reddits
spec:
  ports:
    - port: 5672
      targetPort: 5672
      protocol: TCP
      name: http
  clusterIP: None
  selector:
    app: reddits
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-sts
  labels:
    app: reddits
spec:
  replicas: 1
  serviceName: "rabbitmq-svc"
  selector:
    matchLabels:
      app: reddits
  template:
    metadata:
      labels:
        app: reddits
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8
          ports:
            - name: http
              containerPort: 5672
              protocol: TCP
